frontend/src/app/modules/schema-engine/import-schema/import-schema-dialog.component.scss
.loading {
    border-radius: 16px;
    background: #fff;
    position: absolute;
    z-index: 99;
    left: 0;
    bottom: 0;
    right: 0;
    top: 0;
    display: flex;
    align-items: center;
    justify-items: center;
    justify-content: center;
    align-content: center;
}

form {
    display: flex;
    flex-direction: column;
    width: 452px;
    overflow: visible;
    padding-bottom: 25px;
}

.form-label {
    color: #181818;
    font-family: Inter, sans-serif;
    font-size: 12px;
    font-style: normal;
    font-weight: 500;
}

:host ::ng-deep {
    .p-tab {
        padding: 0 !important;
    }
}

.tabview-label {
    padding: 1rem;
}

.dialog-body {
    min-height: 350px;
    max-height: 350px;
    overflow-y: auto;
    position: relative;
}

::ng-deep {
    .p-dialog-title {
        font-family: Poppins, sans-serif;
        font-size: 24px;
        font-style: normal;
        font-weight: 600;
    }

    .p-dialog {
        box-shadow: none;
    }

    .p-dialog-header {
        border-top-left-radius: 16px !important;
        border-top-right-radius: 16px !important;
    }

    .p-dialog-content {
        border-bottom-left-radius: 16px;
        border-bottom-right-radius: 16px;
    }

    .p-button {
        border-radius: 8px;
    }
}

.dialog-footer {
    margin-top: 25px;
}

.action-buttons {
    display: flex;
}

.cancel-button {
    margin-left: auto;
    margin-right: 15px;
}

